# Doki

./: .gitignore  LICENSE  README.md  build.bat  build_manylinux.bat  build_manylinux2010.bat  build_manylinux2014.bat  build_manylinux2_24.bat  meson.build  publish.bat  pyproject.toml  setup.py  test.bat  test.sh
.github/workflows/: pythonapp.yml  wheels.yml
olddoki/: build.bat  location.txt
scripts/: build.bat  build_manylinux2010.bat  build_manylinux2_28.bat
src/doki/: arraylist.c  arraylist.h  doki.c  funmatrix.c  funmatrix.h  meson.build  platform.c  platform.h  qgate.h  qops.c  qops.h  qops_fail.c  qopsold.c  qstate.c  qstate.h
tests/: canonical_form_tests.py  density_matrix_tests.py  hadamard.py  join_regs.py  join_regs_tests.py  measure_tests.py  measures.py  multiple_gate_tests.py  one_gate_tests.py  probability_tests.py  reg_creation_tests.py  timed_test.py
