[build-system]
build-backend = 'mesonpy'
requires = [
#    "setuptools>=42",
    "meson-python",
    "numpy>=1.19"
]
#build-backend = "setuptools.build_meta"

[project]
name = "doki-Mowstyl"
version = "1.5.2"
description="Python interface for Doki (QSimov core)"
long_description="Python module containing Doki, the core of QSimov quantum computer simulation platform. Written in C with OpenMP parallelism."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Hernán Indíbil de la Cruz Calvo", email = "indikalesken@hotmail.com"},
]
dependencies = [
    "numpy>=1.19"
]

#[tool.setuptools.packages]
#find = {}  # Scan the project directory with the default parameters

# OR
#[tool.setuptools.packages.find]
# All the following settings are optional:
#where = ["src"]  # ["."] by default
#include = ["doki*"]  # ["*"] by default
# exclude = ["mypackage.tests*"]  # empty by default
#namespaces = false  # true by default
