[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python",
    "numpy>=1.19"
]

[project]
name = "doki"
version = "1.5.2"
description="Python interface for Doki (QSimov core)"
long_description="Python module containing Doki, the core of QSimov quantum computer simulation platform. Written in C with OpenMP parallelism."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
authors = [
  {name = "Hernán Indíbil de la Cruz Calvo", email = "indikalesken@hotmail.com"},
]
dependencies = [
    "numpy>=1.19"
]

[tool.cibuildwheel]
archs = "auto64"
skip = "pp*"
test-requires = "scipy"
test-command = [
  "python {project}/tests/reg_creation_tests.py 1 14",
  "python {project}/tests/one_gate_tests.py 1 14 1",
  "python {project}/tests/one_gate_tests.py 1 14 8",
  "python {project}/tests/measure_tests.py 1 10 1000 1",
  "python {project}/tests/measure_tests.py 1 10 1000 8",
  "python {project}/tests/multiple_gate_tests.py 2 10 1",
  "python {project}/tests/multiple_gate_tests.py 2 10 8",
  "python {project}/tests/join_regs_tests.py 14 1",
  "python {project}/tests/join_regs_tests.py 14 8",
  "python {project}/tests/canonical_form_tests.py 1 14",
  "python {project}/tests/probability_tests.py 1 14 1",
  "python {project}/tests/probability_tests.py 1 14 8",
  "python {project}/tests/density_matrix_tests.py 1 5",
]
